raigad image chnaged

--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
           <img src="assets/img/portfolio/raigad.jpg" class="img-fluid" alt="Raigad Mineral Monitoring">
           <div class="img-overlay">
             <div class="portfolio-links">
-              <a href="assets/img/portfolio/raigad.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Government CRM Preview"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/portfolio/raigad.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Government CRM Preview"><i class="bx bx-plus"></i></a>
               <a href="#" target="_blank" title="Gov Project"><i class="bx bx-shield-quarter"></i></a>
             </div>
           </div>
