--- a/index.html
+++ b/index.html
@@ -437,10 +437,10 @@
     <div class="col-lg-4 col-md-6 portfolio-item filter-web mb-4">
       <div class="portfolio-wrap">
         <div class="portfolio-img">
-          <img src="assets/img/portfolio/raigad.jpg" class="img-fluid" alt="Raigad Mineral Monitoring">
+          <img src="assets/img/portfolio/raigad.JPG" class="img-fluid" alt="Raigad Mineral Monitoring">
           <div class="img-overlay">
             <div class="portfolio-links">
-              <a href="assets/img/portfolio/raigad.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Government CRM Preview"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/portfolio/raigad.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Government CRM Preview"><i class="bx bx-plus"></i></a>
               <a href="#" target="_blank" title="Gov Project"><i class="bx bx-shield-quarter"></i></a>
             </div>
           </div>
@@ -457,10 +457,10 @@
       <div class="col-lg-4 col-md-6 portfolio-item filter-web mb-4">
         <div class="portfolio-wrap">
           <div class="portfolio-img">
-            <img src="assets/img/portfolio/talentvalue.PNG" class="img-fluid" alt="Talent Value">
+            <img src="assets/img/portfolio/talentvalue.png" class="img-fluid" alt="Talent Value">
             <div class="img-overlay">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/talentvalue.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Zoom View"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/talentvalue.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Zoom View"><i class="bx bx-plus"></i></a>
                 <a href="https://talentvalue.in/" target="_blank"><i class="bx bx-link"></i></a>
               </div>
             </div>
